# MiniFPM

./: CMakeLists.txt  INSTALL  README.md
examples/: CMakeLists.txt
examples/laplace/: Makefile  config.ini  geometry.geo  geometry.msh  laplace.cpp
examples/mixer/: Makefile  geometry.geo  geometry.msh  mixer.cpp
src/: Array.cpp  Array.h  Array_AD.cpp  Array_AD.h  CMakeLists.txt  Makefile  Makefile.dep  default_config.h  domainIntegration.cpp  domainIntegration.h  matrixIML.cpp  matrixIML.h  matrixUmfpack.cpp  matrixUmfpack.h  mfpmException.cpp  mfpmException.h  mfpmMatrix.cpp  mfpmMatrix.h  mfpmMatrix_AD.cpp  mfpmMatrix_AD.h  mfpmParameters.cpp  mfpmParameters.h  operators.cpp  operators.h  optimisation.cpp  optimisation.h  pointSet.cpp  pointSet.h  points.cpp  points.h  postResult.cpp  postResult.h  primitive_operators.cpp  primitive_operators.h  refinement.cpp  refinement.h  scalarField.cpp  scalarField.h  vectorField.cpp  vectorField.h  (+2 more)
